force-app/main/default/objects/Tech_Comision__c/Tech_Comision__c.object-meta.xml
<CustomObject>
    <label>Comision</label>
    <nameField>
        <displayFormat>COM-{0000}</displayFormat>
        <label>Número de comisión</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tech Comisiones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>