force-app/main/default/objects/Tech_Comision__c/fields/Estatus__c.field-meta.xml
<CustomField>
    <fullName>Estatus__c</fullName>
    <label>Estatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Devengada</fullName>
                <default>true</default>
                <label>Devengada</label>
            </value>
            <value>
                <fullName>Liberada</fullName>
            </value>
            <value>
                <fullName>Pagada</fullName>
            </value>
            <value>
                <fullName>Revertida</fullName>
                <label>Revertida (clawback)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>