force-app/main/default/objects/Tech_Comision__c/fields/Fianza__c.field-meta.xml
<CustomField>
    <fullName>Fianza__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fianza</label>
    <referenceTo>Tech_Fianza__c</referenceTo>
    <relationshipName>Comisiones_Fianza</relationshipName>
    <type>Lookup</type>
</CustomField>