force-app/main/default/objects/Tech_Comision__c/fields/Monto_Ollin__c.field-meta.xml
<CustomField>
    <fullName>Monto_Ollin__c</fullName>
    <label>Monto Ollin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>