force-app/main/default/objects/Tech_Comision__c/fields/Monto_Vendedor__c.field-meta.xml
<CustomField>
    <fullName>Monto_Vendedor__c</fullName>
    <label>Monto vendedor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>