force-app/main/default/objects/Tech_Comision__c/fields/Pct_Aplicado__c.field-meta.xml
<CustomField>
    <fullName>Pct_Aplicado__c</fullName>
    <label>% Aplicado (snapshot)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>