force-app/main/default/objects/Tech_Comision__c/fields/Seguro__c.field-meta.xml
<CustomField>
    <fullName>Seguro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Seguro</label>
    <referenceTo>Tech_Seguro__c</referenceTo>
    <relationshipName>Comisiones_Seguro</relationshipName>
    <type>Lookup</type>
</CustomField>