force-app/main/default/objects/Tech_Comision__c/fields/Tabla_Comision__c.field-meta.xml
<CustomField>
    <fullName>Tabla_Comision__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tabla de comisiones</label>
    <referenceTo>Tabla_Comision__c</referenceTo>
    <relationshipName>Comisiones_Tabla</relationshipName>
    <type>Lookup</type>
</CustomField>